cmake_minimum_required(VERSION 3.4)
project(PreviewPointcloud)
find_package(PCL QUIET)
include_directories(BEFORE /usr/include/c  /usr/include/cpp)

if(PCL_FOUND)
    include_directories(BEFORE /usr/include/c /usr/include/cpp)
    find_package(OpenCV REQUIRED)
    include_directories(${OpenCV_INCLUDE_DIRS})
    message(STATUS "LIBPCL_LINK_LIBRARIES=${PCL_INCLUDE_DIRS}")
    message(STATUS "EPOXY_LINK_LIBRARIES=${PCL_LIBRARY_DIRS}")
    include_directories(${PCL_INCLUDE_DIRS})
    link_directories(${PCL_LIBRARY_DIRS})
    add_definitions(${PCL_DEFINITIONS})
    add_executable(preview_pointcloud preview_pointcloud.cpp)
    target_link_libraries(preview_pointcloud ${PCL_LIBRARIES} -lboost_thread -lpthread ArducamDepthCamera ${OpenCV_LIBS})
else()
    message(STATUS "PCL point cloud preview skipped!")
endif()
