cmake_minimum_required(VERSION 3.12)
project(PreviewPointcloud)
add_compile_options(-Wno-psabi)
find_package(PCL QUIET COMPONENTS common io visualization)

if(PCL_FOUND)
    include_directories(/usr/include/cpp)
    find_package(OpenCV REQUIRED)
    include_directories(${OpenCV_INCLUDE_DIRS})
    message(STATUS "LIBPCL_LINK_LIBRARIES=${PCL_INCLUDE_DIRS}")
    message(STATUS "EPOXY_LINK_LIBRARIES=${PCL_LIBRARY_DIRS}")
    include_directories(${PCL_INCLUDE_DIRS})
    link_directories(${PCL_LIBRARY_DIRS})
    add_definitions(${PCL_DEFINITIONS})
    add_executable(preview_pointcloud preview_pointcloud.cpp)
    #-lboost_thread -lpthread
    target_link_libraries(preview_pointcloud ArducamDepthCamera ${PCL_LIBRARIES} ${OpenCV_LIBS}) 
else()
    message(STATUS "PCL point cloud preview need libpcl!")
endif()