<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>arducam_rclpy_tof_pointcloud</name>
  <version>0.0.1</version>
  <description>Arducam Tof Camera Examples.</description>
  <maintainer email="dennis@arducam.com">pi</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
